# newsminal

./: .gitignore  Cargo.toml  LICENSE  README.md  lorem_ipsum.txt
src/: backend.rs  frontend.rs  input.rs  main.rs  printer.rs
src/backend/: danas.rs  insajder.rs  mod.rs  n1.rs  parsers.rs
src/frontend/: controllers.rs  mod.rs  tests.rs
