[package]
name = "newsminal"
version = "0.2.2"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"]}
crossterm = "0.28.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rss = "2.0.12"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
testdata = []
